# smolagents-rs

./: .gitignore  Cargo.toml  README.md
examples/: cli.rs  function_calling_agent.rs  mcp.rs  test.rs  test2.rs
lumo/: Cargo.toml
lumo-cli/: Cargo.toml
lumo-cli/src/: cli_utils.rs  config.rs  main.rs  splash.rs
lumo-cli/src/config/: servers.yaml
lumo-examples/: Cargo.toml
lumo-examples/examples/: cli.rs  function_calling_agent.rs  mcp.rs  planning_agent.rs  python_interpreter.rs
lumo/examples/: cli.rs  function_calling_agent.rs  mcp.rs  python_interpreter.rs
lumo/src/: local_python_interpreter.rs  logger.rs  prompts.rs
lumo/src/agent/: agent_step.rs  agent_trait.rs  code_agent.rs  function_calling_agent.rs  mcp_agent.rs  mod.rs  multistep_agent.rs
lumo/src/models/: model_traits.rs  ollama.rs  openai.rs
lumo/src/tools/: base.rs  ddg_search.rs  google_search.rs  python_interpreter.rs  tool_traits.rs  visit_website.rs
src/: agents.rs  errors.rs  lib.rs  local_python_interpreter.rs  logger.rs  prompts.rs  tools.rs
src/agent/: agent_step.rs  agent_trait.rs  code_agent.rs  function_calling_agent.rs  mcp_agent.rs  mod.rs  multistep_agent.rs
src/models/: model_traits.rs  ollama.rs  openai.rs  types.rs
src/tool/: final_answer_tool.rs  mod.rs
src/tools/: final_answer.rs  final_answer_tool.rs  google_search.rs  python_interpreter.rs  tool_traits.rs  visit_website.rs
tool_derive/: Cargo.toml
tool_derive/src/: lib.rs
