[workspace.package]
version = "0.1.3"
edition = "2021"
description = "A rust port of the the HuggingFace smolagents library. Build LLM agents with tools and code execution."
license = "Apache-2.0"
authors = ["Akshay Ballal <arballal@gmail.com>"]
repository = "https://github.com/akshayballal95/smolagents-rs"

[workspace]
resolver = "2"
members = ["lumo", "lumo-cli", "lumo-examples"]

[workspace.dependencies]
htmd = "0.1.6"
reqwest = {version = "0.12.12", features = ['json']}
anyhow = "1.0.96"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.139"
log = "0.4.26"
colored = "3.0.0"
scraper = "0.23.1"
terminal_size = "0.4.1"
schemars = "0.8.22"
chrono = "0.4.40"
rustpython-parser = { version = "0.4.0" }
pyo3 = { version = "0.23.5", features = ["auto-initialize"]}
regex = "1.11.0"
async-trait = "0.1.77"
futures = "0.3"
clap = { version = "4.5.1", features = ["derive"] }
textwrap = "0.16.0"
bat = "0.25.0"
nanoid = "0.4.0"
async-stream = "0.3.6"
rustyline = "15.0.0"
serde_yaml = "0.9.33"
directories = "6.0.0"
strip-ansi-escapes = "0.2.0"

# mcp
mcp-client = {git = "https://github.com/modelcontextprotocol/rust-sdk"}
mcp-core = {git = "https://github.com/modelcontextprotocol/rust-sdk"}
tower = { version = "0.4", features = ["timeout", "util"] }
tokio = {version = "1.43.0", features = ["rt-multi-thread", "macros"]}
