[package]
name = "lumo-examples"
version = "0.1.3"
edition = "2021"
description = "The CLI for running Lumo Agent"
license = "Apache-2.0"
authors = ["Akshay Ballal <arballal@gmail.com>"]
repository = "https://github.com/akshayballal95/smolagents-rs"


[dependencies]
clap.workspace = true
anyhow.workspace = true
lumo = {path = "../lumo", features = ["all"]}
mcp-core.workspace = true
mcp-client.workspace = true
async-trait.workspace = true
tower.workspace = true
colored.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml = "0.9"
directories = "6.0.0"
futures.workspace = true
bat.workspace = true
